fix: make youtube embed less squished

--- a/src/themes/timeless/body.css
+++ b/src/themes/timeless/body.css
@@ -135,7 +135,7 @@ ul#filetoc,
 	border-radius: 10px;
 	padding: 0;
 	min-width: 256px;
-	max-width: 384px;
+	max-width: 567px;
 }
 
 .thumbcaption {
